--- a/Pandas_Demo_part_4.ipynb
+++ b/Pandas_Demo_part_4.ipynb
@@ -60,10 +60,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "high_salary = (df['ConvertedComp'] > 70000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "                   Country                                 LanguageWorkedWith  \\\nRespondent                                                                      \n6                   Canada                                         Java;R;SQL   \n9              New Zealand  Bash/Shell/PowerShell;C#;HTML/CSS;JavaScript;P...   \n13           United States  Bash/Shell/PowerShell;HTML/CSS;JavaScript;PHP;...   \n16          United Kingdom  Bash/Shell/PowerShell;C#;HTML/CSS;JavaScript;T...   \n22           United States  Bash/Shell/PowerShell;C++;HTML/CSS;JavaScript;...   \n...                    ...                                                ...   \n88876        United States  Bash/Shell/PowerShell;C#;HTML/CSS;Java;Python;...   \n88877        United States  Bash/Shell/PowerShell;C;Clojure;HTML/CSS;Java;...   \n88878        United States               HTML/CSS;JavaScript;Scala;TypeScript   \n88879              Finland                   Bash/Shell/PowerShell;C++;Python   \n88882          Netherlands             C#;HTML/CSS;Java;JavaScript;PHP;Python   \n\n            ConvertedComp  \nRespondent                 \n6                366420.0  \n9                 95179.0  \n13                90000.0  \n16               455352.0  \n22               103000.0  \n...                   ...  \n88876            180000.0  \n88877           2000000.0  \n88878            130000.0  \n88879             82488.0  \n88882            588012.0  \n\n[22289 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Country</th>\n      <th>LanguageWorkedWith</th>\n      <th>ConvertedComp</th>\n    </tr>\n    <tr>\n      <th>Respondent</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>6</th>\n      <td>Canada</td>\n      <td>Java;R;SQL</td>\n      <td>366420.0</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>New Zealand</td>\n      <td>Bash/Shell/PowerShell;C#;HTML/CSS;JavaScript;P...</td>\n      <td>95179.0</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>United States</td>\n      <td>Bash/Shell/PowerShell;HTML/CSS;JavaScript;PHP;...</td>\n      <td>90000.0</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>United Kingdom</td>\n      <td>Bash/Shell/PowerShell;C#;HTML/CSS;JavaScript;T...</td>\n      <td>455352.0</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>United States</td>\n      <td>Bash/Shell/PowerShell;C++;HTML/CSS;JavaScript;...</td>\n      <td>103000.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>88876</th>\n      <td>United States</td>\n      <td>Bash/Shell/PowerShell;C#;HTML/CSS;Java;Python;...</td>\n      <td>180000.0</td>\n    </tr>\n    <tr>\n      <th>88877</th>\n      <td>United States</td>\n      <td>Bash/Shell/PowerShell;C;Clojure;HTML/CSS;Java;...</td>\n      <td>2000000.0</td>\n    </tr>\n    <tr>\n      <th>88878</th>\n      <td>United States</td>\n      <td>HTML/CSS;JavaScript;Scala;TypeScript</td>\n      <td>130000.0</td>\n    </tr>\n    <tr>\n      <th>88879</th>\n      <td>Finland</td>\n      <td>Bash/Shell/PowerShell;C++;Python</td>\n      <td>82488.0</td>\n    </tr>\n    <tr>\n      <th>88882</th>\n      <td>Netherlands</td>\n      <td>C#;HTML/CSS;Java;JavaScript;PHP;Python</td>\n      <td>588012.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>22289 rows × 3 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "df.loc[high_salary, ['Country', 'LanguageWorkedWith', 'ConvertedComp']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries = ['United States', 'India', 'United Kingdom', 'Germany', 'Canada']\n",
+    "filt = df['Country'].isin(countries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Respondent\n1        United Kingdom\n4         United States\n6                Canada\n8                 India\n10                India\n              ...      \n85642     United States\n85961    United Kingdom\n86012             India\n88282     United States\n88377            Canada\nName: Country, Length: 45008, dtype: object"
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "df.loc[filt, 'Country']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Respondent\n1                          HTML/CSS;Java;JavaScript;Python\n2                                      C++;HTML/CSS;Python\n3                                                 HTML/CSS\n4                                      C;C++;C#;Python;SQL\n5              C++;HTML/CSS;Java;JavaScript;Python;SQL;VBA\n                               ...                        \n88377                        HTML/CSS;JavaScript;Other(s):\n88601                                                  NaN\n88802                                                  NaN\n88816                                                  NaN\n88863    Bash/Shell/PowerShell;HTML/CSS;Java;JavaScript...\nName: LanguageWorkedWith, Length: 88883, dtype: object"
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "df['LanguageWorkedWith']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filt = df['LanguageWorkedWith'].str.contains('Python', na=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Respondent\n1         True\n2         True\n3        False\n4         True\n5         True\n         ...  \n88377    False\n88601    False\n88802    False\n88816    False\n88863    False\nName: LanguageWorkedWith, Length: 88883, dtype: bool"
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "filt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Respondent\n1                          HTML/CSS;Java;JavaScript;Python\n2                                      C++;HTML/CSS;Python\n4                                      C;C++;C#;Python;SQL\n5              C++;HTML/CSS;Java;JavaScript;Python;SQL;VBA\n8        Bash/Shell/PowerShell;C;C++;HTML/CSS;Java;Java...\n                               ...                        \n84539    Bash/Shell/PowerShell;C;C++;HTML/CSS;Java;Java...\n85738      Bash/Shell/PowerShell;C++;Python;Ruby;Other(s):\n86566      Bash/Shell/PowerShell;HTML/CSS;Python;Other(s):\n87739             C;C++;HTML/CSS;JavaScript;PHP;Python;SQL\n88212                           HTML/CSS;JavaScript;Python\nName: LanguageWorkedWith, Length: 36443, dtype: object"
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
+   "source": [
+    "df.loc[filt, 'LanguageWorkedWith']"
+   ]
   }
  ],
  "metadata": {
