--- a/snippets_part_5.ipynb
+++ b/snippets_part_5.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>first</th>\n      <th>last</th>\n      <th>email</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Corey</td>\n      <td>Schafer</td>\n      <td>coreymschafer@email.com</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Jane</td>\n      <td>Doe</td>\n      <td>janedoe@email.com</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>John</td>\n      <td>Farmer</td>\n      <td>johnsmith@email.com</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 24
     }
    ],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -422,12 +422,49 @@
       "text/plain": "first    3\nlast     3\nemail    3\ndtype: int64"
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 25
     }
    ],
    "source": [
     "# apply on a dataframe - runs a function on each row or column of that dataframe\n",
     "df.apply(len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0    3\n1    3\n2    3\ndtype: int64"
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "source": [
+    "df.apply(len, axis='columns')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "first                      Corey\nlast                         Doe\nemail    coreymschafer@email.com\ndtype: object"
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
+   "source": [
+    "# use functions that make sense to be used on a series object when using apply() on a df\n",
+    "df.apply(pd.Series.min)"
    ]
   },
   {
@@ -438,51 +475,35 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "0    3\n1    3\n2    3\ndtype: int64"
+      "text/plain": "first                      Corey\nlast                         Doe\nemail    coreymschafer@email.com\ndtype: object"
      },
      "metadata": {},
      "execution_count": 28
     }
    ],
    "source": [
-    "df.apply(len, axis='columns')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "first                      Corey\nlast                         Doe\nemail    coreymschafer@email.com\ndtype: object"
-     },
-     "metadata": {},
-     "execution_count": 30
-    }
-   ],
-   "source": [
-    "# use functions that make sense to be used on a series object when using apply() on a df\n",
-    "df.apply(pd.Series.min)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "first                      Corey\nlast                         Doe\nemail    coreymschafer@email.com\ndtype: object"
-     },
-     "metadata": {},
-     "execution_count": 32
-    }
-   ],
-   "source": [
     "df.apply(lambda x: x.min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "   first  last  email\n0      5     7     23\n1      4     3     17\n2      4     6     19",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>first</th>\n      <th>last</th>\n      <th>email</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>5</td>\n      <td>7</td>\n      <td>23</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4</td>\n      <td>3</td>\n      <td>17</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4</td>\n      <td>6</td>\n      <td>19</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "source": [
+    "# method two: applymap\n",
+    "# apply works on a series, applymap works on every element of a dataframe\n",
+    "df.applymap(len)"
    ]
   },
   {
